# Analysis_RG-D

./: .clang-format  CMakeLists.txt
Debug/: Analysis_RG-D  CMakeCache.txt  Makefile  cmake_install.cmake
Status_Study/plots/electron_kinematics/C/: chi2_e.C  p_e.C  phi_e.C  status.C  theta_e.C  vz_e.C
Status_Study/plots/electron_kinematics/root/: chi2_e.root  p_e.root  phi_e.root  status.root  theta_e.root  vz_e.root
Status_Study/plots/electron_kinematics/tex/: chi2_e.tex  p_e.tex  phi_e.tex  status.tex  theta_e.tex  vz_e.tex
config/: CxC_config.toml
include/: Constantes.hpp  Counter.hpp  Event.hpp  FitFunction.hpp  Histograms.hpp  Particle.hpp  PlotHelper.hpp  Ploter.hpp  RGD_Reader.hpp  Status_Histograms.hpp  Status_Ploter.hpp  Status_Reader.hpp
include/Core/: BS_thread_pool.hpp  Constantes.hpp  Counter.hpp  Particle.hpp  Particle_v2.hpp  PlotHelper.hpp
include/Matt_Study/: Event.hpp  FitFunction.hpp  Histograms.hpp  Ploter.hpp  RGD_Reader.hpp  RunTypes.hpp  beam_charge.hpp
include/Status_Study/: Status_Ploter.hpp  Status_Reader.hpp
latex/Matt_study/: main.aux  main.dvi  main.tex
plots/allPionMinus_kinematics/C/: chi2_e.C  p_e.C  phi_e.C  theta_e.C  vz_e.C
plots/allPionMinus_kinematics/root/: chi2_e.root  p_e.root  phi_e.root  theta_e.root  vz_e.root
plots/allPionMinus_kinematics/tex/: chi2_e.tex  p_e.tex  phi_e.tex  theta_e.tex  vz_e.tex
plots/allPionPlus_kinematics/C/: chi2_e.C  p_e.C  phi_e.C  theta_e.C  vz_e.C
plots/allPionPlus_kinematics/root/: chi2_e.root  p_e.root  phi_e.root  theta_e.root  vz_e.root
plots/allPionPlus_kinematics/tex/: chi2_e.tex  p_e.tex  phi_e.tex  theta_e.tex  vz_e.tex
plots/electron_kinematics/C/: chi2_e.C  p_e.C  phi_e.C  theta_e.C  vz_e.C
plots/electron_kinematics/root/: chi2_e.root  p_e.root  phi_e.root  theta_e.root  vz_e.root
plots/electron_kinematics/tex/: chi2_e.tex  p_e.tex  phi_e.tex  theta_e.tex  vz_e.tex
plots/event_kinematics/C/: Q2.C  W.C  lc.C  nu.C  t.C  zh.C
plots/event_kinematics/root/: Q2.root  W.root  lc.root  nu.root  t.root  zh.root
plots/event_kinematics/tex/: Q2.tex  W.tex  lc.tex  nu.tex  t.tex  zh.tex
plots/inv_mass_q2_bins/C/: inv_Mass_Q12.C  inv_Mass_Q225.C  inv_Mass_Q253.C  inv_Mass_Q335.C  inv_Mass_Q3545.C  inv_Mass_Q456.C
plots/inv_mass_q2_bins/root/: inv_Mass_Q12.root  inv_Mass_Q225.root  inv_Mass_Q253.root  inv_Mass_Q335.root  inv_Mass_Q3545.root  inv_Mass_Q456.root
plots/inv_mass_q2_bins/tex/: inv_Mass_Q12.tex  inv_Mass_Q225.tex  inv_Mass_Q253.tex  inv_Mass_Q335.tex  inv_Mass_Q3545.tex  inv_Mass_Q456.tex
plots/rho_kinematics/C/: inv Mass.C
plots/rho_kinematics/root/: inv Mass.root
plots/rho_kinematics/tex/: inv Mass.tex
plots_Matt_Study/CxC/allPionMinus_kinematics/C/: chi2_e.C  chi2_pion_minus.C  p_e.C  p_pion_minus.C  phi_e.C  phi_pion_minus.C  theta_e.C  theta_pion_minus.C  vz_e.C  vz_pion_minus.C
plots_Matt_Study/CxC/allPionMinus_kinematics/root/: chi2_e.root  chi2_pion_minus.root  p_e.root  p_pion_minus.root  phi_e.root  phi_pion_minus.root  theta_e.root  theta_pion_minus.root  vz_e.root  vz_pion_minus.root
plots_Matt_Study/CxC/allPionMinus_kinematics/tex/: chi2_e.tex  chi2_pion_minus.tex  p_e.tex  p_pion_minus.tex  phi_e.tex  phi_pion_minus.tex  theta_e.tex  theta_pion_minus.tex  vz_e.tex  vz_pion_minus.tex
plots_Matt_Study/CxC/allPionPlus_kinematics/C/: chi2_e.C  chi2_pion_plus.C  p_e.C  p_pion_plus.C  phi_e.C  phi_pion_plus.C  theta_e.C  theta_pion_plus.C  vz_e.C  vz_pion_plus.C
plots_Matt_Study/CxC/allPionPlus_kinematics/root/: chi2_e.root  chi2_pion_plus.root  p_e.root  p_pion_plus.root  phi_e.root  phi_pion_plus.root  theta_e.root  theta_pion_plus.root  vz_e.root  vz_pion_plus.root
plots_Matt_Study/CxC/allPionPlus_kinematics/tex/: chi2_e.tex  chi2_pion_plus.tex  p_e.tex  p_pion_plus.tex  phi_e.tex  phi_pion_plus.tex  theta_e.tex  (+3 more)
plots_Matt_Study/LD2/: main.cpp
plots_Matt_Study/NuclearTransparency/C/: NuclearTransparency.C
plots_Matt_Study/NuclearTransparency/root/: NuclearTransparency.root
plots_Matt_Study/NuclearTransparency/tex/: NuclearTransparency.tex
source/: main.cpp
(+402 files in other folders)
